src/test/deca/context/invalid/oracle/mult_op_with_wrong_type_left2.deca
{
    56.0 * true;
}